--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@types/eslint": "^9.6.0",
 		"autoprefixer": "^10.4.20",
+		"clsx": "^2.1.1",
 		"eslint": "^9.7.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
@@ -48,6 +49,8 @@
 		"prettier-plugin-tailwindcss": "^0.6.5",
 		"publint": "^0.2.0",
 		"svelte": "^5.0.0",
+		"tailwind-merge": "^2.5.4",
+		"tailwind-variants": "^0.2.1",
 		"tailwindcss": "^3.4.9",
 		"typescript": "^5.3.2",
 		"vite": "^5.0.11",
