update build script

--- a/jsrepo-manifest.json
+++ b/jsrepo-manifest.json
@@ -123,12 +123,36 @@
 				"devDependencies": []
 			},
 			{
+				"name": "arrow-left-right",
+				"directory": "src/lib/icons",
+				"category": "icons",
+				"tests": false,
+				"subdirectory": false,
+				"files": ["arrow-left-right.svelte"],
+				"localDependencies": [],
+				"_imports_": {},
+				"dependencies": [],
+				"devDependencies": []
+			},
+			{
 				"name": "arrow-left",
 				"directory": "src/lib/icons",
 				"category": "icons",
 				"tests": false,
 				"subdirectory": false,
 				"files": ["arrow-left.svelte"],
+				"localDependencies": [],
+				"_imports_": {},
+				"dependencies": [],
+				"devDependencies": []
+			},
+			{
+				"name": "arrow-right-left",
+				"directory": "src/lib/icons",
+				"category": "icons",
+				"tests": false,
+				"subdirectory": false,
+				"files": ["arrow-right-left.svelte"],
 				"localDependencies": [],
 				"_imports_": {},
 				"dependencies": [],
@@ -1371,6 +1395,18 @@
 				"devDependencies": []
 			},
 			{
+				"name": "crop",
+				"directory": "src/lib/icons",
+				"category": "icons",
+				"tests": false,
+				"subdirectory": false,
+				"files": ["crop.svelte"],
+				"localDependencies": [],
+				"_imports_": {},
+				"dependencies": [],
+				"devDependencies": []
+			},
+			{
 				"name": "dna-off",
 				"directory": "src/lib/icons",
 				"category": "icons",
@@ -1809,6 +1845,18 @@
 				"tests": false,
 				"subdirectory": false,
 				"files": ["image-off.svelte"],
+				"localDependencies": [],
+				"_imports_": {},
+				"dependencies": [],
+				"devDependencies": []
+			},
+			{
+				"name": "infinity",
+				"directory": "src/lib/icons",
+				"category": "icons",
+				"tests": false,
+				"subdirectory": false,
+				"files": ["infinity.svelte"],
 				"localDependencies": [],
 				"_imports_": {},
 				"dependencies": [],
@@ -2259,6 +2307,150 @@
 				"devDependencies": []
 			},
 			{
+				"name": "move-diagonal-2",
+				"directory": "src/lib/icons",
+				"category": "icons",
+				"tests": false,
+				"subdirectory": false,
+				"files": ["move-diagonal-2.svelte"],
+				"localDependencies": [],
+				"_imports_": {},
+				"dependencies": [],
+				"devDependencies": []
+			},
+			{
+				"name": "move-diagonal",
+				"directory": "src/lib/icons",
+				"category": "icons",
+				"tests": false,
+				"subdirectory": false,
+				"files": ["move-diagonal.svelte"],
+				"localDependencies": [],
+				"_imports_": {},
+				"dependencies": [],
+				"devDependencies": []
+			},
+			{
+				"name": "move-down-left",
+				"directory": "src/lib/icons",
+				"category": "icons",
+				"tests": false,
+				"subdirectory": false,
+				"files": ["move-down-left.svelte"],
+				"localDependencies": [],
+				"_imports_": {},
+				"dependencies": [],
+				"devDependencies": []
+			},
+			{
+				"name": "move-down-right",
+				"directory": "src/lib/icons",
+				"category": "icons",
+				"tests": false,
+				"subdirectory": false,
+				"files": ["move-down-right.svelte"],
+				"localDependencies": [],
+				"_imports_": {},
+				"dependencies": [],
+				"devDependencies": []
+			},
+			{
+				"name": "move-down",
+				"directory": "src/lib/icons",
+				"category": "icons",
+				"tests": false,
+				"subdirectory": false,
+				"files": ["move-down.svelte"],
+				"localDependencies": [],
+				"_imports_": {},
+				"dependencies": [],
+				"devDependencies": []
+			},
+			{
+				"name": "move-horizontal",
+				"directory": "src/lib/icons",
+				"category": "icons",
+				"tests": false,
+				"subdirectory": false,
+				"files": ["move-horizontal.svelte"],
+				"localDependencies": [],
+				"_imports_": {},
+				"dependencies": [],
+				"devDependencies": []
+			},
+			{
+				"name": "move-left",
+				"directory": "src/lib/icons",
+				"category": "icons",
+				"tests": false,
+				"subdirectory": false,
+				"files": ["move-left.svelte"],
+				"localDependencies": [],
+				"_imports_": {},
+				"dependencies": [],
+				"devDependencies": []
+			},
+			{
+				"name": "move-right",
+				"directory": "src/lib/icons",
+				"category": "icons",
+				"tests": false,
+				"subdirectory": false,
+				"files": ["move-right.svelte"],
+				"localDependencies": [],
+				"_imports_": {},
+				"dependencies": [],
+				"devDependencies": []
+			},
+			{
+				"name": "move-up-left",
+				"directory": "src/lib/icons",
+				"category": "icons",
+				"tests": false,
+				"subdirectory": false,
+				"files": ["move-up-left.svelte"],
+				"localDependencies": [],
+				"_imports_": {},
+				"dependencies": [],
+				"devDependencies": []
+			},
+			{
+				"name": "move-up-right",
+				"directory": "src/lib/icons",
+				"category": "icons",
+				"tests": false,
+				"subdirectory": false,
+				"files": ["move-up-right.svelte"],
+				"localDependencies": [],
+				"_imports_": {},
+				"dependencies": [],
+				"devDependencies": []
+			},
+			{
+				"name": "move-up",
+				"directory": "src/lib/icons",
+				"category": "icons",
+				"tests": false,
+				"subdirectory": false,
+				"files": ["move-up.svelte"],
+				"localDependencies": [],
+				"_imports_": {},
+				"dependencies": [],
+				"devDependencies": []
+			},
+			{
+				"name": "move-vertical",
+				"directory": "src/lib/icons",
+				"category": "icons",
+				"tests": false,
+				"subdirectory": false,
+				"files": ["move-vertical.svelte"],
+				"localDependencies": [],
+				"_imports_": {},
+				"dependencies": [],
+				"devDependencies": []
+			},
+			{
 				"name": "navigation-2-off",
 				"directory": "src/lib/icons",
 				"category": "icons",
@@ -2511,6 +2703,18 @@
 				"devDependencies": []
 			},
 			{
+				"name": "rainbow",
+				"directory": "src/lib/icons",
+				"category": "icons",
+				"tests": false,
+				"subdirectory": false,
+				"files": ["rainbow.svelte"],
+				"localDependencies": [],
+				"_imports_": {},
+				"dependencies": [],
+				"devDependencies": []
+			},
+			{
 				"name": "redo",
 				"directory": "src/lib/icons",
 				"category": "icons",
@@ -2613,6 +2817,18 @@
 				"tests": false,
 				"subdirectory": false,
 				"files": ["scan-text.svelte"],
+				"localDependencies": [],
+				"_imports_": {},
+				"dependencies": [],
+				"devDependencies": []
+			},
+			{
+				"name": "scissors",
+				"directory": "src/lib/icons",
+				"category": "icons",
+				"tests": false,
+				"subdirectory": false,
+				"files": ["scissors.svelte"],
 				"localDependencies": [],
 				"_imports_": {},
 				"dependencies": [],
@@ -2955,6 +3171,18 @@
 				"devDependencies": []
 			},
 			{
+				"name": "square-scissors",
+				"directory": "src/lib/icons",
+				"category": "icons",
+				"tests": false,
+				"subdirectory": false,
+				"files": ["square-scissors.svelte"],
+				"localDependencies": [],
+				"_imports_": {},
+				"dependencies": [],
+				"devDependencies": []
+			},
+			{
 				"name": "square-stack",
 				"directory": "src/lib/icons",
 				"category": "icons",
@@ -3093,6 +3321,18 @@
 				"tests": false,
 				"subdirectory": false,
 				"files": ["timer.svelte"],
+				"localDependencies": [],
+				"_imports_": {},
+				"dependencies": [],
+				"devDependencies": []
+			},
+			{
+				"name": "tornado",
+				"directory": "src/lib/icons",
+				"category": "icons",
+				"tests": false,
+				"subdirectory": false,
+				"files": ["tornado.svelte"],
 				"localDependencies": [],
 				"_imports_": {},
 				"dependencies": [],
@@ -3309,6 +3549,18 @@
 				"tests": false,
 				"subdirectory": false,
 				"files": ["vote.svelte"],
+				"localDependencies": [],
+				"_imports_": {},
+				"dependencies": [],
+				"devDependencies": []
+			},
+			{
+				"name": "waves",
+				"directory": "src/lib/icons",
+				"category": "icons",
+				"tests": false,
+				"subdirectory": false,
+				"files": ["waves.svelte"],
 				"localDependencies": [],
 				"_imports_": {},
 				"dependencies": [],
