--- a/package.json
+++ b/package.json
@@ -33,34 +33,35 @@
 		"svelte": "^5.0.0"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-auto": "^6.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/package": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@types/eslint": "^9.6.0",
 		"autoprefixer": "^10.4.20",
-		"bits-ui": "^0.21.16",
+		"bits-ui": "^1.3.16",
 		"clsx": "^2.1.1",
 		"eslint": "^9.7.0",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.36.0",
-		"globals": "^15.0.0",
+		"eslint-config-prettier": "^10.1.1",
+		"eslint-plugin-svelte": "^3.5.1",
+		"globals": "^16.0.0",
 		"prettier": "^3.3.2",
 		"prettier-plugin-svelte": "^3.2.6",
 		"prettier-plugin-tailwindcss": "^0.6.5",
-		"publint": "^0.2.0",
+		"publint": "^0.3.10",
 		"svelte": "^5.0.0",
-		"tailwind-merge": "^2.5.4",
+		"tailwind-merge": "^2.6.0",
 		"tailwind-variants": "^0.2.1",
 		"tailwindcss": "^3.4.9",
+		"tailwindcss-animate": "^1.0.7",
 		"typescript": "^5.3.2",
-		"vite": "^5.0.11",
+		"vite": "^6.2.5",
 		"vite-plugin-raw": "^1.0.3",
-		"vitest": "^2.0.4"
+		"vitest": "^3.1.1"
 	},
 	"dependencies": {
-		"@number-flow/svelte": "^0.1.4",
-		"lucide-svelte": "^0.454.0",
-		"mode-watcher": "^0.4.1"
+		"@number-flow/svelte": "^0.3.6",
+		"lucide-svelte": "^0.487.0",
+		"mode-watcher": "^0.5.1"
 	}
 }
