--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
 	"name": "icons",
 	"version": "0.0.1",
+	"description": "beautifully crafted, moving icons. for svelte.",
+	"author": "jis3r",
+	"license": "MIT",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
