chore: rename package from "icons" to "movingicons"

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "icons",
+	"name": "movingicons",
 	"version": "0.0.1",
 	"description": "beautifully crafted, moving icons. for svelte.",
 	"author": "jis3r",
