--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
 	},
 	"dependencies": {
 		"@number-flow/svelte": "^0.3.6",
-		"lucide-svelte": "^0.510.0",
+		"@vercel/analytics": "^1.5.0",
+		"lucide-svelte": "^0.511.0",
 		"mode-watcher": "^0.5.1"
 	}
 }
