--- a/package.json
+++ b/package.json
@@ -32,12 +32,9 @@
 			"svelte": "./dist/index.js"
 		}
 	},
-	"peerDependencies": {
-		"svelte": "^5.0.0"
-	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^6.0.0",
-		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/adapter-auto": "^6.0.1",
+		"@sveltejs/kit": "^2.21.1",
 		"@sveltejs/package": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@types/eslint": "^9.6.0",
@@ -67,5 +64,8 @@
 		"@vercel/analytics": "^1.5.0",
 		"lucide-svelte": "^0.511.0",
 		"mode-watcher": "^0.5.1"
+	},
+	"overrides": {
+		"cookie": "0.7.0"
 	}
 }
