--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
 	"dependencies": {
 		"@number-flow/svelte": "^0.3.6",
 		"@vercel/analytics": "^1.5.0",
+		"iflog": "^0.0.4",
 		"lucide-svelte": "^0.511.0",
 		"mode-watcher": "^0.5.1",
 		"svelte-fast-marquee": "^1.0.2"
