--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@jis3r/icons",
-	"version": "1.1.2",
+	"version": "1.1.3",
 	"description": "beautifully crafted, moving icons. for svelte.",
 	"author": "jis3r",
 	"license": "MIT",
@@ -38,7 +38,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^6.0.1",
-		"@sveltejs/kit": "^2.21.1",
+		"@sveltejs/kit": "^2.26.1",
 		"@sveltejs/package": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@types/eslint": "^9.6.0",
@@ -53,7 +53,6 @@
 		"prettier-plugin-svelte": "^3.2.6",
 		"prettier-plugin-tailwindcss": "^0.6.5",
 		"publint": "^0.3.10",
-		"svelte": "^5.0.0",
 		"tailwind-merge": "^2.6.0",
 		"tailwind-variants": "^0.2.1",
 		"tailwindcss": "^3.4.9",
@@ -61,13 +60,14 @@
 		"typescript": "^5.3.2",
 		"vite": "^6.3.5",
 		"vite-plugin-raw": "^1.0.3",
-		"vitest": "^3.1.1"
+		"vitest": "^3.1.1",
+		"@lucide/svelte": "^0.534.0"
 	},
 	"dependencies": {
-		"@lucide/svelte": "^0.525.0",
+		"svelte": "^5.0.0",
 		"@number-flow/svelte": "^0.3.6",
 		"@vercel/analytics": "^1.5.0",
-		"iflog": "^0.0.4",
+		"iflog": "^0.3.0",
 		"mode-watcher": "^0.5.1",
 		"motion": "^12.23.6",
 		"posthog-js": "^1.246.0",
