--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"@sveltejs/kit": "^2.26.1",
 		"@sveltejs/package": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
+		"@tailwindcss/vite": "^4.1.16",
 		"@types/eslint": "^9.6.0",
 		"autoprefixer": "^10.4.20",
 		"bits-ui": "^1.8.0",
@@ -59,11 +60,11 @@
 		"globals": "^16.0.0",
 		"prettier": "^3.3.2",
 		"prettier-plugin-svelte": "^3.2.6",
-		"prettier-plugin-tailwindcss": "^0.6.5",
+		"prettier-plugin-tailwindcss": "^0.7.1",
 		"publint": "^0.3.10",
 		"tailwind-merge": "^2.6.0",
 		"tailwind-variants": "^0.2.1",
-		"tailwindcss": "^3.4.9",
+		"tailwindcss": "^4.1.16",
 		"tailwindcss-animate": "^1.0.7",
 		"typescript": "^5.3.2",
 		"vite": "^6.3.5",
