--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		}
 	},
 	"devDependencies": {
+		"@lucide/svelte": "^0.552.0",
 		"@sveltejs/adapter-auto": "^6.0.1",
 		"@sveltejs/kit": "^2.26.1",
 		"@sveltejs/package": "^2.0.0",
@@ -62,17 +63,17 @@
 		"prettier-plugin-svelte": "^3.2.6",
 		"prettier-plugin-tailwindcss": "^0.7.1",
 		"publint": "^0.3.10",
-		"tailwind-merge": "^2.6.0",
-		"tailwind-variants": "^0.2.1",
+		"tailwind-merge": "^3.3.1",
+		"tailwind-variants": "^3.1.1",
 		"tailwindcss": "^4.1.16",
 		"tailwindcss-animate": "^1.0.7",
+		"tw-animate-css": "^1.4.0",
 		"typescript": "^5.3.2",
 		"vite": "^6.3.5",
 		"vite-plugin-raw": "^1.0.3",
 		"vitest": "^3.1.1"
 	},
 	"dependencies": {
-		"@lucide/svelte": "^0.535.0",
 		"@number-flow/svelte": "^0.3.6",
 		"iflog": "^0.3.0",
 		"mode-watcher": "^0.5.1",
