--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@jis3r/icons",
-	"version": "1.25.1",
+	"version": "1.25.2",
 	"description": "beautifully crafted, moving icons. for svelte.",
 	"keywords": [
 		"svelte",
@@ -29,7 +29,7 @@
 		"index": "node scripts/indexIcons.js",
 		"reexport": "node scripts/generateIconExports.js",
 		"registry:build": "node scripts/updateRegistry.js && shadcn-svelte registry build",
-		"prep": "npm run index && npm run reexport && npm run registry:build && npm run build && npm run format"
+		"prep": "npm run index && npm run reexport && npm run registry:build && npm run build && npm run package && npm run format"
 	},
 	"files": [
 		"dist",
