--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
 		"test": "npm run test:unit -- --run",
 		"index": "node scripts/indexIcons.js",
 		"reexport": "node scripts/generateIconExports.js",
-		"registry:build": "node scripts/updateRegistry.js && shadcn-svelte registry build",
+		"registry:build": "node scripts/updateRegistry.js && node scripts/buildRegistry.js",
 		"prep": "npm run index && npm run reexport && npm run registry:build && npm run build && npm run package && npm run format"
 	},
 	"files": [
