--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
 		"lint": "prettier --check . && eslint .",
 		"test:unit": "vitest",
 		"test": "npm run test:unit -- --run",
-		"index": "node scripts/indexIcons.js && prettier --write src/lib-docs/icons-meta.js",
-		"reexport": "node scripts/generateIconExports.js",
+		"index": "tsx scripts/indexIcons.ts && prettier --write src/lib-docs/icons-meta.ts",
+		"reexport": "tsx scripts/generateIconExports.ts",
 		"registry:build": "node scripts/updateRegistry.js && node scripts/buildRegistry.js",
 		"prep": "npm run index && npm run reexport && npm run registry:build && npm run build && npm run package && npm run format"
 	},
@@ -82,6 +82,7 @@
 		"tailwind-variants": "^3.1.1",
 		"tailwindcss": "^4.1.16",
 		"tailwindcss-animate": "^1.0.7",
+		"tsx": "^4.21.0",
 		"tw-animate-css": "^1.4.0",
 		"typescript": "^5.3.2",
 		"vite": "^6.3.5",
